Refactored optimization framework and functions.